[package]
name = "substrate-client"
version = "0.1.0"
edition = "2021"

[lib]
# ANDROID: "This must contain at least cdylib for Android libraries to be generated."
# https://github.com/bbqsrc/cargo-ndk/blob/main/example/Cargo.toml
# else:
# [2022-05-16T09:53:58Z INFO  cargo_ndk::cli] Copying libraries to ./jniLibs...
# [2022-05-16T09:53:58Z ERROR cargo_ndk::cli] No .so files found in path
#
# IOS: error: cannot produce cdylib for `shared-rs v0.1.0 (/.../wallet-app/shared/rust)` as the target `x86_64-apple-ios` does not support these crate types
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# default-features to disable all std related code?
# "you can basically only use the compose_extrinsic_offline macro."
# maybe see https://github.com/scs/substrate-api-client/issues/166 ?
substrate-api-client = { version = "~0.6.0",  git = "https://github.com/scs/substrate-api-client.git", default-features = false, branch = "polkadot-v0.9.19" }
# [windows] error: failed to run custom build command for `openssl-sys v0.9.73
# Still fails even with Perl(strawberry) cf README
# So for now install Android Studio inside WSL2...
openssl = { version = '0.10', features = ["vendored"] }

# those are for the examples cf https://github.com/scs/substrate-api-client/blob/master/Cargo.toml
# but here need them as part of our public API
# TODO cleanup eg MAYBE we need sp-core NOT the full node-template-runtime
# env_logger = "0.9.0"
# node-template-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-keyring = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
# clap = { version = "2.33", features = ["yaml"] }
# wabt = "0.10.0"

sp-std = { default-features = false, version = "4.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-core = { version = "6.0.0", default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }

log = "0.4"
# NOTE: this is a dep of "android_logger" so no point in putting it behind a "cfg"
env_logger = "0.9.0"
ipfs-api-backend-hyper = { version = "0.4.0", features = [ "with-send-sync" , "with-builder" ] }
futures-util = "0.3"
tokio = { version = "1.20", features = ["rt-multi-thread"] }

# only for Android
jni = { version = "0.19.0", optional = true }
bytemuck = "1.11.0"

# local
common = { path = "../common" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"

[dev-dependencies]
# features "invocation" needed for tests(to create a JVM)
jni = { version = "0.19.0", features = ["invocation"] }
serial_test = "0.8.0"

[features]
default = ["std"]
std = [
	"sp-core/std",
    "substrate-api-client/std",
    "substrate-api-client/ws-client",
]
with-jni = ["jni"]
with-cwrapper = []