[package]
name = "substrate-client"
version = "0.1.0"
edition = "2021"

[lib]
# ANDROID: "This must contain at least cdylib for Android libraries to be generated."
# https://github.com/bbqsrc/cargo-ndk/blob/main/example/Cargo.toml
# else:
# [2022-05-16T09:53:58Z INFO  cargo_ndk::cli] Copying libraries to ./jniLibs...
# [2022-05-16T09:53:58Z ERROR cargo_ndk::cli] No .so files found in path
#
# IOS: error: cannot produce cdylib for `shared-rs v0.1.0 (/.../wallet-app/shared/rust)` as the target `x86_64-apple-ios` does not support these crate types
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
integritee-cli = { git = "https://github.com/Interstellar-Network/integritee-worker.git", branch = "interstellar-M5" }

log = "0.4"
# NOTE: this is a dep of "android_logger" so no point in putting it behind a "cfg"
env_logger = "0.10"
ipfs-api-backend-hyper = { version = "0.6", features = [ "with-send-sync" , "with-builder" ] }
futures-util = "0.3"
tokio = { version = "1.20", features = ["rt-multi-thread"] }

# only for Android
jni = { version = "0.20", optional = true }
bytemuck = "1.11.0"

# local
common = { path = "../common" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.12"

[dev-dependencies]
# features "invocation" needed for tests(to create a JVM)
jni = { version = "0.20", features = ["invocation"] }
serial_test = "1"

[features]
default = ["std"]
std = []
with-jni = ["jni"]
with-cwrapper = []